# telescope

./: CMakeLists.txt  README.md
config/: CMakeLists-alignment-writer.txt.in  CMakeLists-bitmagic.txt.in  telescope_openmp_config.hpp.in  version.h.in
include/: Alignment.hpp  KallistoAlignment.hpp  Mode.hpp  common.hpp  file.hpp  log.hpp  read_alignments.hpp  read_kallisto_alignments.hpp  read_themisto_alignments.hpp  structs.hpp  telescope.hpp  telescope_log.hpp  write_alignments.hpp
src/: convert_alignments_intersection.cpp  convert_alignments_union.cpp  convert_alignments_unpaired.cpp  read_alignments.cpp  read_kallisto_alignments.cpp  read_themisto_alignments.cpp  telescope.cpp  write_alignments.cpp
